fixed width issue with scrollbar, testing different article layout on 1-Make-Wort.html

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  width:100vw;
+  width:100%;
   overflow-x: hidden;  
   background-color:#eeeeee;
 }
@@ -29,7 +29,7 @@ a, a:visited, a:hover, a:active {
 .contentWrap {
   width: 66vw;
   margin: 0 auto;
-  max-width: 100vw;
+  max-width:100%; 
   padding: 24px;
 }
 
@@ -37,6 +37,11 @@ a, a:visited, a:hover, a:active {
   width: 96vw;
   margin: 0 auto;
   padding: 24px;
+}
+
+.contentWrap100{
+  width: 100vw;
+  max-width:100%;   
 }
 
 .navActive{
